carrer front-end added

--- a/career.html
+++ b/career.html
@@ -30,8 +30,8 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <div class="navbar-nav">   
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link active" href="index.html" alt="Podstawowe informacje o firmie Rywal">O nas</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="news.html" alt="Nasze aktualności">Aktualności</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="index.html" alt="Podstawowe informacje o firmie Rywal">O nas</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link active" href="news.html" alt="Nasze aktualności">Aktualności</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#uslugi" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#galria" alt="Galeria zdjęć">Galeria</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="career.html" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
@@ -44,67 +44,71 @@
         <!-- menu end-->
 
         <!-- main content -->
-        <div class="row mt-5 pt-3">
+        <div class="row my-5"></div>
 
-            <!-- main display -->
-            <main class="col">
-                <div class="row ml-1 ml-md-4 ml-lg-1 ml-xl-0 my-5 pt-3 pb-2 pb-md-5 align-items-end justify-content-start">
-                    <div class="col-5 col-xl-4 pr-3 text-right">
-                        <img id="mainPic1" class="shadow img-fluid mainContentFoto" src="img/tir-01.gif" alt="Dwie ciężarówki">
-                    </div>
-                    <div class="col-6" id="mainConBox1">
-                        <h2 id="mainConText1">Jesteśmy zawsze na czas.</h2>
-                    </div>
-                </div>
-                <div class="row mr-5 mr-xl-0 mt-lg-2 mt-xl-3 pt-3 pt-xl-3 justify-content-center">
-                    <div class="col-8 col-xl-6">
-                        <div class="row justify-content-start">
-                            <div class="col-12 col-lg-11" id="mainConBox2">
-                                <h4 id="mainConText2">Nie zawodzimy nawet w najtrudnieszych chwilach.</h4>
-                            </div>
-                        </div>        
-                        <div class="row justify-content-start">
-                            <div id="lineHorizontal"><div id="lineVertical"></div></div>
-                        </div>
-                        <div class="row justify-content-start"> 
-                            <div class="col">
-                                <img class="shadow img-fluid mainContentFoto" id="mainPic2" src="img/tir-02.gif" alt="Holowana ciężarówka">
-                            </div>
-                        </div>
-                    </div>
-                </div>    
-            </main>
-            <!-- main display end-->
-
-            <!-- first header -->
-            <div class="row">
-                <div class="shadow col py-5 bg-light">
-                    <div class="row px-3">
-                        <div class="col-sm-7 col-lg-6 mx-lg-4">
-                            <h1 class="text-dark">Header 1</h1>
-                            <p class="text-dark text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi.</p>
-                        </div>
-                        <div class="col-sm-5">
-                            <img class="img-fluid roadPic" src="img/forest-road.jpg" alt="Gruntowa droga w lesie">
-                            <img class="img-fluid roadPic" src="img/asphalt-road.jpg" alt="Gruntowa droga w lesie">
+            <!-- picture -->
+        <div class="row">
+            <div class="col py-4 py-md-5">
+                <div class="row px-2 mx-1 mx-md-3 justify-content-center">
+                    <div class="col-12 p-0 shadow">
+                        <div class="careerPicCard">
+                            <h4 class="careerHeader text-light font-weight-bold m-0 px-2 py-1">Dołącz do Nas</h4>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- first header end-->
-
-            <!-- second header -->
-            <div class="row justify-content-center">
-                <div class="col-10 py-5">
-                    <div class="row px-1 mx-1 px-md-5 mx-md-5 my-3 py-3 my-lg-4 py-lg-4 my-xl-5 py-xl-5 justify-content-center">
-                        <h1 class="text-dark">Header 2</h1>
-                        <h4 class="text-dark text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum ad accusamus nemo magni quos amet, consectetur placeat quod veritatis!</h4>
-                    </div>    
-                </div>
-            </div>
-            <!-- second header end-->
-            
         </div>
+            <!-- picture end -->
+
+            <!-- text -->
+        <div class="row">
+            <div class="shadow col py-5 bg-light">
+                <div class="row px-3 pb-5 justify-content-center">
+                    <div class="col-12 col-md-10">
+                        <h5>Obecnie poszukujemy kandydatów na kierowców kat. C,D.</h5>
+                        <p id="offer001" class="collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa unde ratione maiores eum delectus corrupti vel quis itaque sit quo?</p>
+                        <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#offer001" aria-expanded="false" aria-controls="offer001">Czytaj dalej . . .</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <!-- text end-->
+
+            <!-- form -->
+        <div class="row">
+            <div class="col-md-10 col-lg-8 col-xl-6 align-items-center mx-auto">
+                <form class="p-3 mx-0 my-3 shadow p-sm-5 m-sm-4 m-md-5">
+                    <label for="Input1">Podaj swoje imię i nazwisko:</label>
+                    <div class="row">
+                        <div class="col-12 col-sm-6">
+                            <input type="text" class="form-control" placeholder="Imię">
+                        </div>
+                        <div class="col-12 col-sm-6 mt-2 mt-sm-0">
+                            <input type="text" class="form-control" placeholder="Nazwisko">
+                        </div>
+                    </div>    
+                    <div class="form-group pt-3">
+                      <label for="InputEmail1">Podaj swój adres email:</label>
+                      <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp" placeholder="email">
+                      <small id="emailHelp" class="form-text text-muted">Nie udostępniamy nikomu Twojego adresu.</small>
+                    </div>
+                    
+                    <div class="form-group pb-3">
+                        <label for="FormControlFile1">Dołącz swoje CV:</label>
+                        <input type="file" class="form-control-file" id="FormControlFile1">
+                    </div>
+                    <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="Check1">
+                      <label class="form-check-label" for="Check1">Akcepuję <a href="#">plitykę prywatności</a> oraz wyrażam zgodę na przetwarzanie moich danych na potrzeby rekrutacji. </label>
+                    </div>
+                    <button type="submit" class="btn btn-outline-primary m-3">Aplikuj</button>
+                    <hr>
+                    <p class="text-center" style="text-indent: 0;">Możesz też skontaktować się z naszym biurem bezpośrednio, poprzez dane kontaktowe ze stopki.</p>
+                </form>
+            </div>
+        </div>
+            <!-- form end-->
+
         <!-- main content end-->
 
         <!-- contact -->
