--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
                     <a class="navbar-brand" href="#start">                  
                         <img id="brandLogo" src="img/logo.gif" width="auto" height="90" class="d-inline-block align-top" alt="logo firmowe firmy Rywal">
                     </a>
-                    <button class="btn btn-link navbar-toggler btn-lg mb-2" type="button" data-toggle="collapse" data-target="#navbarNav">
+                    <button class="btn btn-link navbar-toggler btn-lg mb-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-controls="navbarNav">
                         <span class="navbar-toggler-icon align-items-center"><i class="fas fa-bars fa-2x color-custom"></i></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -34,7 +34,7 @@
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link active" href="news.html" alt="Nasze aktualności">Aktualności</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#uslugi" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#galria" alt="Galeria zdjęć">Galeria</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#kariera" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
+                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="career.html" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
                             <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#gpsSymbolPic" alt="Dane kontaktowe do firmy Rywal">Kontakt</a>
                         </div>
                     </div>
@@ -53,15 +53,15 @@
                     <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3">
                         <div class="newsPicCard">
                             <img class="img-fluid" src="img/newsPic001.jpg" alt="Koparka ładuje zięmię na ciężarówkę">
-                            <h4 class="newsHeader text-light font-weight-bold m-0 px-2 py-1">Header lorem</h4>
+                            <h4 class="newsHeader text-light font-weight-bold m-0 px-2 py-1">Header first</h4>
                         </div>
                         <div class="newsStrap mt-3 mb-1"></div>
                         <p class="newsDate">02.05.2019</p> 
                     </div>
                     <div class="col-sm-6">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, necessitatibus eligendi? Vel saepe distinctio exercitationem.</p>
-                        <p id="news001" class="collapse text-dark">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat magnam nisi culpa alias ducimus id dignissimos itaque fugiat facere sed!</p>
-                        <button class="btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news001" aria-expanded="false">Czytaj dalej . . .</button>
+                        <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, necessitatibus eligendi? Vel saepe distinctio exercitationem.</p>
+                        <p id="news001" class="collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat magnam nisi culpa alias ducimus id dignissimos itaque fugiat facere sed!</p>
+                        <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news001" aria-expanded="false" aria-controls="news001">Czytaj dalej . . .</button>
                     </div>
                 </div>
             </div>
@@ -73,14 +73,14 @@
             <div class="shadow col py-5 bg-light">
                 <div class="row px-3 justify-content-center">
                     <div class="col-sm-6">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, sunt quasi fuga fugiat illo dicta!</p>
-                            <p id="news002" class="collapse text-dark">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa unde ratione maiores eum delectus corrupti vel quis itaque sit quo?</p>
-                            <button class="btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news002" aria-expanded="false">Czytaj dalej . . .</button>
+                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, sunt quasi fuga fugiat illo dicta!</p>
+                            <p id="news002" class="collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa unde ratione maiores eum delectus corrupti vel quis itaque sit quo?</p>
+                            <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news002" aria-expanded="false" aria-controls="news002">Czytaj dalej . . .</button>
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3 order-first order-sm-last">
                         <div class="newsPicCard">
                             <img class="img-fluid" src="img/newsPic002.jpg" alt="Ciężarówka załadowana dużą ilością siana">
-                            <h4 class="newsHeader text-light font-weight-bold m-0 px-2 py-1">Header lorem</h4>
+                            <h4 class="newsHeader text-light font-weight-bold m-0 px-2 py-1">Header second</h4>
                         </div>
                         <div class="newsStrap mt-3 mb-1"></div>
                         <p class="newsDate">02.05.2019</p> 
@@ -97,15 +97,15 @@
                     <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3">
                         <div class="newsPicCard">
                             <img class="img-fluid" src="img/newsPic003.jpg" alt="Koła ciężarówek">
-                            <h4 class="newsHeader text-light font-weight-bold m-0 px-2 py-1">Header lorem</h4>
+                            <h4 class="newsHeader text-light font-weight-bold m-0 px-2 py-1">Header third</h4>
                         </div>
                         <div class="newsStrap mt-3 mb-1"></div>
                         <p class="newsDate">02.05.2019</p> 
                     </div>
                     <div class="col-sm-6">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates harum dignissimos tempora dolor sit ea!</p>
-                            <p id="news003" class="collapse text-dark">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eveniet, placeat distinctio saepe quasi tempora quaerat eaque ad laudantium expedita?</p>
-                            <button class="btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news003" aria-expanded="false">Czytaj dalej . . .</button>
+                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates harum dignissimos tempora dolor sit ea!</p>
+                            <p id="news003" class="collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eveniet, placeat distinctio saepe quasi tempora quaerat eaque ad laudantium expedita?</p>
+                            <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news003" aria-expanded="false" aria-controls="news003">Czytaj dalej . . .</button>
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                     <p>80-000 Człuchów</p>
                     <h5 class="font-weight-bold mb-3"><a href="tel:+485555555" class="text-dark">Tel: +48 555-55-55</a></h5>
                     <h5 class="my-0">E-mail:</h5>
-                    <h5 class="font-weight-bold my-0"><a href="mailto:biuro@rywal.pl" class="text-dark">biuro@rywal.pl</a></h5>
+                    <p class="font-weight-bold my-0"><a href="mailto:biuro@rywal.pl" class="text-dark">biuro@rywal.pl</a></p>
                 </div>
             </div>
         </div>
