--- a/gallery.html
+++ b/gallery.html
@@ -46,68 +46,43 @@
         <!-- main content -->
         <div class="row my-5"></div>
 
-            <!-- picture -->
-        <div class="row">
-            <div class="col py-4 py-md-5">
-                <div class="row px-2 mx-1 mx-md-3 justify-content-center">
-                    <div class="col-12 p-0 shadow">
-                        <div class="careerPicCard">
-                            <h4 class="careerHeader text-light font-weight-bold m-0 px-2 py-1">Dołącz do Nas</h4>
-                        </div>
+        <!-- gallery -->
+        <div class="row justify-content-center">
+            <div class="col-6 pt-5 mb-1">
+                <div id="carousel" class="carousel slide" data-ride="carousel">   
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="/img/forest-road.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                      </div>
                     </div>
+                    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
                 </div>
-            </div>
+            </div>     
         </div>
-            <!-- picture end -->
-
-            <!-- text -->
-        <div class="row">
-            <div class="shadow col py-5 bg-light">
-                <div class="row px-3 pb-5 justify-content-center">
-                    <div class="col-12 col-md-10">
-                        <h5>Obecnie poszukujemy kandydatów na kierowców kat. C,D.</h5>
-                        <p id="offer001" class="collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa unde ratione maiores eum delectus corrupti vel quis itaque sit quo?</p>
-                        <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#offer001" aria-expanded="false" aria-controls="offer001">Czytaj dalej . . .</button>
-                    </div>
-                </div>
-            </div>
+        <div class="row justify-content-center">
+            <div class="col my-1">
+                <ol class="carousel-indicators m-0 py-3">
+                    <li data-target="#carousel" data-slide-to="0" class="active"><img src="/img/forest-road.jpg" class="d-block w-100" alt="..."></li>
+                    <li data-target="#carousel" data-slide-to="1"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                    <li data-target="#carousel" data-slide-to="2"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                </ol>
+            </div>  
         </div>
-            <!-- text end-->
-
-            <!-- form -->
-        <div class="row">
-            <div class="col-md-10 col-lg-8 col-xl-6 align-items-center mx-auto">
-                <form class="p-3 mx-0 my-3 shadow p-sm-5 m-sm-4 m-md-5">
-                    <label for="Input1">Podaj swoje imię i nazwisko:</label>
-                    <div class="row">
-                        <div class="col-12 col-sm-6">
-                            <input type="text" class="form-control" placeholder="Imię" required>
-                        </div>
-                        <div class="col-12 col-sm-6 mt-2 mt-sm-0">
-                            <input type="text" class="form-control" placeholder="Nazwisko" required>
-                        </div>
-                    </div>    
-                    <div class="form-group pt-3">
-                      <label for="InputEmail">Podaj swój adres email:</label>
-                      <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="email" required>
-                      <small id="emailHelp" class="form-text text-muted">Nie udostępniamy nikomu Twojego adresu.</small>
-                    </div>
-                    
-                    <div class="form-group pb-3">
-                        <label for="FormControlFile">Dołącz swoje CV:</label>
-                        <input type="file" class="form-control-file" id="FormControlFile" required>
-                    </div>
-                    <div class="form-check">
-                      <input type="checkbox" class="form-check-input" id="Check" required>
-                      <label class="form-check-label" for="Check">Akcepuję <a href="#">plitykę prywatności</a> oraz wyrażam zgodę na przetwarzanie moich danych na potrzeby rekrutacji.</label>
-                    </div>
-                    <button type="submit" class="btn btn-outline-primary m-3">Aplikuj</button>
-                    <hr>
-                    <p class="text-center" style="text-indent: 0;">Możesz też skontaktować się z naszym biurem bezpośrednio, poprzez dane kontaktowe ze stopki.</p>
-                </form>
-            </div>
-        </div>
-            <!-- form end-->
+            
+        <!-- gallery end -->
 
         <!-- main content end-->
 
