--- a/career.html
+++ b/career.html
@@ -30,12 +30,12 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <div class="navbar-nav">   
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="index.html" alt="Podstawowe informacje o firmie Rywal">O nas</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link active" href="news.html" alt="Nasze aktualności">Aktualności</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#uslugi" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="gallery.html" alt="Galeria zdjęć">Galeria</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="career.html" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#gpsSymbolPic" alt="Dane kontaktowe do firmy Rywal">Kontakt</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="index.html" alt="Podstawowe informacje o firmie Rywal">O nas</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link active" href="news.html" alt="Nasze aktualności">Aktualności</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="#uslugi" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="gallery.html" alt="Galeria zdjęć">Galeria</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="career.html" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="#gpsSymbolPic" alt="Dane kontaktowe do firmy Rywal">Kontakt</a>
                         </div>
                     </div>
                 </nav>
