--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
     </section>
     <!-- background end-->
 
-    <div id="start" class="container-fluid">
+    <div id="start" class="container-fluid p-0 m-0">
         <!-- menu -->
         <div class="row">
             <header id="navbar" class="shadow col bg-white fixed-top">
@@ -30,12 +30,12 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <div class="navbar-nav">   
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="index.html" alt="Podstawowe informacje o firmie Rywal">O nas</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link active" href="news.html" alt="Nasze aktualności">Aktualności</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#uslugi" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="gallery.html" alt="Galeria zdjęć">Galeria</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="career.html" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
-                            <a class="a-hover nav-item mx-1 font-weight-bold text-capitalize color-custom nav-link" href="#gpsSymbolPic" alt="Dane kontaktowe do firmy Rywal">Kontakt</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="index.html" alt="Podstawowe informacje o firmie Rywal">O nas</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link active" href="news.html" alt="Nasze aktualności">Aktualności</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="#uslugi" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="gallery.html" alt="Galeria zdjęć">Galeria</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="career.html" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="#gpsSymbolPic" alt="Dane kontaktowe do firmy Rywal">Kontakt</a>
                         </div>
                     </div>
                 </nav>
@@ -44,51 +44,156 @@
         <!-- menu end-->
 
         <!-- main content -->
-        <div class="row my-5"></div>
+        <div class="row my-4"></div>
 
-        <!-- gallery -->
-        <div class="row justify-content-center">
-            <div class="col-6 pt-5 mb-1">
-                <div id="carousel" class="carousel slide" data-ride="carousel">   
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="/img/forest-road.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
-                      </div>
+        <!-- first gallery -->
+        <div class="col">
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-sm-7 col-10 pt-5 mt-3 mt-md-5">
+                    <h2 class="col m-0 p-auto text-secondary text-capitalize">First gallery</h2>
+                    <div id="carousel1" class="carousel slide" data-ride="carousel">   
+                        <div class="carousel-inner shadow" data-toggle="modal" data-target="#picModal">
+                        <div class="carousel-item active">
+                            <img src="/img/forest-road.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel1" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                        </a>
                     </div>
-                    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
+                </div>     
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-7 col-md-8 col-sm-9 col-11 my-3 my-lg-4 my-xl-5 p-2 p-md-3 p-xl-4 bg-light shadow">
+                    <ol class="carousel-indicators m-0 px-2">
+                        <li data-target="#carousel1" data-slide-to="0" class="active"><img src="/img/forest-road.jpg" class="d-block w-100" alt="..."></li> 
+                        <li data-target="#carousel1" data-slide-to="1"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel1" data-slide-to="2"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel1" data-slide-to="3"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel1" data-slide-to="4"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                    </ol>
                 </div>
-            </div>     
+            </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col my-1">
-                <ol class="carousel-indicators m-0 py-3">
-                    <li data-target="#carousel" data-slide-to="0" class="active"><img src="/img/forest-road.jpg" class="d-block w-100" alt="..."></li>
-                    <li data-target="#carousel" data-slide-to="1"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
-                    <li data-target="#carousel" data-slide-to="2"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
-                </ol>
-            </div>  
+        <!-- first gallery end -->
+        <!-- second gallery -->
+        <div class="col bg-light shadow">
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-sm-7 col-10 mt-3 mt-md-5">
+                    <h2 class="col m-0 p-auto text-secondary text-capitalize">Second gallery</h2>
+                    <div id="carousel2" class="carousel slide" data-ride="carousel">   
+                        <div class="carousel-inner" data-toggle="modal" data-target="#picModal">
+                        <div class="carousel-item active">
+                            <img src="/img/forest-road.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-7 col-md-8 col-sm-9 col-11 my-3 my-lg-4 my-xl-5 p-2 p-md-3 p-xl-4">
+                    <ol class="carousel-indicators m-0 px-2">
+                        <li data-target="#carousel2" data-slide-to="0" class="active"><img src="/img/forest-road.jpg" class="d-block w-100" alt="..."></li> 
+                        <li data-target="#carousel2" data-slide-to="1"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel2" data-slide-to="2"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel2" data-slide-to="3"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel2" data-slide-to="4"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                    </ol>
+                </div>
+            </div>
+        </div> 
+        <!-- second gallery end -->
+
+        <!-- third gallery -->
+        <div class="col">
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-sm-7 col-10 mt-3 mt-md-5">
+                    <h2 class="col m-0 p-auto text-secondary text-capitalize">Third gallery</h2>
+                    <div id="carousel3" class="carousel slide" data-ride="carousel">   
+                        <div class="carousel-inner shadow" data-toggle="modal" data-target="#picModal">
+                          <div class="carousel-item active">
+                            <img src="/img/forest-road.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carousel3" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel3" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>     
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-7 col-md-8 col-sm-9 col-11 my-3 my-lg-4 my-xl-5 p-2 p-md-3 p-xl-4 bg-light shadow">
+                    <ol class="carousel-indicators m-0 px-2">
+                        <li data-target="#carousel3" data-slide-to="0" class="active"><img src="/img/forest-road.jpg" class="d-block w-100" alt="..."></li> 
+                        <li data-target="#carousel3" data-slide-to="1"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel3" data-slide-to="2"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel3" data-slide-to="3"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel3" data-slide-to="4"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                    </ol>
+                </div>
+            </div>
         </div>
-            
-        <!-- gallery end -->
+        <!-- third gallery end -->
 
         <!-- main content end-->
 
         <!-- contact -->
         <div class="row justify-content-center">
-            <div id="gpsSymbolPic" class="col py-3 py-md-4 py-lg-5">
+            <div id="gpsSymbolPic" class="col py-1 py-md-4 py-lg-5">
                 <div class="font-weight-bolder col-8 col-sm-5 col-md-4 pl-sm-3 col-lg-3 pl-lg-4 pl-xl-5 mx-auto mt-4 mt-sm-3 my-md-4 my-lg-5">
                     <h5 class="mb-0">Adres:</h5>
                     <p class="mb-0">ul. Grunwaldzka 20</p>
@@ -109,6 +214,21 @@
         </div>
         <!-- footer end-->
         
+        <!-- modal of gallery -->
+        <div class="modal fade" id="picModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-body">  
+                    <button type="button" class="close btn btn-link" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                  <img src="" class="col mb-3">
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- modal of gallery end-->
+
     </div>
     <script src="script/jquery-3.3.1.min.js"></script>
     <script src="script/bootstrap.bundle.min.js"></script>
