--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Rywal - Transport i Spedycja</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -32,7 +32,7 @@
                         <div class="navbar-nav">   
                             <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link active" href="index.html" alt="Podstawowe informacje o firmie Rywal">O nas</a>
                             <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="news.html" alt="Nasze aktualności">Aktualności</a>
-                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="#uslugi" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
+                            <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="service.html" alt="Usługi oferowane przez firmę Rywal">Usługi</a>
                             <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="gallery.html" alt="Galeria zdjęć">Galeria</a>
                             <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="career.html" alt="Informacje o zatrudnieniu w firmie Rywal">Kariera</a>
                             <a class="a-hover nav-item mx-1 text-capitalize color-custom nav-link" href="#gpsSymbolPic" alt="Dane kontaktowe do firmy Rywal">Kontakt</a>
@@ -96,9 +96,15 @@
             <!-- second header -->
             <div class="row justify-content-center">
                 <div class="col-10 py-5">
-                    <div class="row px-1 mx-1 px-md-5 mx-md-5 my-3 py-3 my-lg-4 py-lg-4 my-xl-5 py-xl-5 justify-content-center">
-                        <h1 class="text-dark">Header 2</h1>
-                        <h4 class="text-dark text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum ad accusamus nemo magni quos amet, consectetur placeat quod veritatis!</h4>
+                    <div class="row px-1 mx-1 px-md-5 mx-md-5 my-3 py-3 my-lg-4 py-lg-4 my-xl-5 py-xl-5 justify-content-center text-center">
+                        <div class="textCarousel">
+                            <h1 class="text-dark">Header 2</h1>
+                            <h4 class="text-dark text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum ad accusamus nemo magni quos amet, consectetur placeat quod veritatis!</h4>
+                        </div>
+                        <div class="textCarousel">
+                            <h1 class="text-dark">Header 3</h1>
+                            <h4 class="text-dark text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero officia sunt praesentium perferendis corrupti accusamus, asperiores voluptate maxime voluptas dolore!</h4>
+                        </div>
                     </div>    
                 </div>
             </div>
@@ -131,8 +137,9 @@
         <!-- footer end-->
         
     </div>
-    <script src="script/jquery-3.3.1.min.js"></script>
-    <script src="script/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script/script.js"></script>
 </body>
 </html>
