gallery bug fixed

--- a/gallery.html
+++ b/gallery.html
@@ -54,19 +54,19 @@
                     <div id="carousel1" class="carousel slide" data-ride="carousel">   
                         <div class="carousel-inner shadow" data-toggle="modal" data-target="#picModal">
                         <div class="carousel-item active">
-                            <img src="/img/forest-road.jpg" class="d-block w-100" alt="...">
+                            <img src="img/forest-road.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic001.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic002.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic001.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic002.jpg" class="d-block w-100" alt="...">
                         </div>
                         </div>
                         <a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
@@ -83,11 +83,11 @@
             <div class="row justify-content-center">
                 <div class="col-lg-7 col-md-8 col-sm-9 col-11 my-3 my-lg-4 my-xl-5 p-2 p-md-3 p-xl-4 bg-light shadow">
                     <ol class="carousel-indicators m-0 px-2">
-                        <li data-target="#carousel1" data-slide-to="0" class="active"><img src="/img/forest-road.jpg" class="d-block w-100" alt="..."></li> 
-                        <li data-target="#carousel1" data-slide-to="1"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
-                        <li data-target="#carousel1" data-slide-to="2"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
-                        <li data-target="#carousel1" data-slide-to="3"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
-                        <li data-target="#carousel1" data-slide-to="4"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel1" data-slide-to="0" class="active"><img src="img/forest-road.jpg" class="d-block w-100" alt="..."></li> 
+                        <li data-target="#carousel1" data-slide-to="1"><img src="img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel1" data-slide-to="2"><img src="img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel1" data-slide-to="3"><img src="img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel1" data-slide-to="4"><img src="img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
                     </ol>
                 </div>
             </div>
@@ -101,19 +101,19 @@
                     <div id="carousel2" class="carousel slide" data-ride="carousel">   
                         <div class="carousel-inner" data-toggle="modal" data-target="#picModal">
                         <div class="carousel-item active">
-                            <img src="/img/forest-road.jpg" class="d-block w-100" alt="...">
+                            <img src="img/forest-road.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic001.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic002.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic001.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic002.jpg" class="d-block w-100" alt="...">
                         </div>
                         </div>
                         <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
@@ -130,11 +130,11 @@
             <div class="row justify-content-center">
                 <div class="col-lg-7 col-md-8 col-sm-9 col-11 my-3 my-lg-4 my-xl-5 p-2 p-md-3 p-xl-4">
                     <ol class="carousel-indicators m-0 px-2">
-                        <li data-target="#carousel2" data-slide-to="0" class="active"><img src="/img/forest-road.jpg" class="d-block w-100" alt="..."></li> 
-                        <li data-target="#carousel2" data-slide-to="1"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
-                        <li data-target="#carousel2" data-slide-to="2"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
-                        <li data-target="#carousel2" data-slide-to="3"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
-                        <li data-target="#carousel2" data-slide-to="4"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel2" data-slide-to="0" class="active"><img src="img/forest-road.jpg" class="d-block w-100" alt="..."></li> 
+                        <li data-target="#carousel2" data-slide-to="1"><img src="img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel2" data-slide-to="2"><img src="img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel2" data-slide-to="3"><img src="img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel2" data-slide-to="4"><img src="img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
                     </ol>
                 </div>
             </div>
@@ -149,19 +149,19 @@
                     <div id="carousel3" class="carousel slide" data-ride="carousel">   
                         <div class="carousel-inner shadow" data-toggle="modal" data-target="#picModal">
                           <div class="carousel-item active">
-                            <img src="/img/forest-road.jpg" class="d-block w-100" alt="...">
+                            <img src="img/forest-road.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic001.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic002.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/img/newsPic001.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic001.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/img/newsPic002.jpg" class="d-block w-100" alt="...">
+                            <img src="img/newsPic002.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <a class="carousel-control-prev" href="#carousel3" role="button" data-slide="prev">
@@ -178,11 +178,11 @@
             <div class="row justify-content-center">
                 <div class="col-lg-7 col-md-8 col-sm-9 col-11 my-3 my-lg-4 my-xl-5 p-2 p-md-3 p-xl-4 bg-light shadow">
                     <ol class="carousel-indicators m-0 px-2">
-                        <li data-target="#carousel3" data-slide-to="0" class="active"><img src="/img/forest-road.jpg" class="d-block w-100" alt="..."></li> 
-                        <li data-target="#carousel3" data-slide-to="1"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
-                        <li data-target="#carousel3" data-slide-to="2"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
-                        <li data-target="#carousel3" data-slide-to="3"><img src="/img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
-                        <li data-target="#carousel3" data-slide-to="4"><img src="/img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel3" data-slide-to="0" class="active"><img src="img/forest-road.jpg" class="d-block w-100" alt="..."></li> 
+                        <li data-target="#carousel3" data-slide-to="1"><img src="img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel3" data-slide-to="2"><img src="img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel3" data-slide-to="3"><img src="img/newsPic001.jpg" class="d-block w-100" alt="..."></li>
+                        <li data-target="#carousel3" data-slide-to="4"><img src="img/newsPic002.jpg" class="d-block w-100" alt="..."></li>
                     </ol>
                 </div>
             </div>
