--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                             <p class="text-dark text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi.</p>
                         </div>
                         <div class="col-sm-5">
-                            <img class="img-fluid roadPic" src="img/forest-road.jpg" alt="Gruntowa droga w lesie">
-                            <img class="img-fluid roadPic" src="img/asphalt-road.jpg" alt="Gruntowa droga w lesie">
+                            <img id="roadPic" class="img-fluid" src="img/forest-road.jpg" alt="Gruntowa droga w lesie">
                         </div>
                     </div>
                 </div>
