--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
         <div class="row">
             <header id="navbar" class="shadow col bg-white fixed-top">
                 <nav class="navbar navbar-expand-md p-0">
-                    <a class="navbar-brand" href="#start">                  
+                    <a class="navbar-brand" href="#start" title="Go to the top of the site">                  
                         <img id="brandLogo" src="img/logo.gif" width="auto" height="90" class="d-inline-block align-top" alt="logo firmowe firmy Rywal">
                     </a>
                     <button class="btn btn-link navbar-toggler btn-lg mb-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false" aria-controls="navbarNav">
@@ -194,14 +194,14 @@
 
         <!-- contact -->
         <div class="row justify-content-center">
-            <div id="gpsSymbolPic" class="col py-1 py-md-4 py-lg-5">
+            <div id="gpsSymbolPic" class="col py-3 py-md-4 py-lg-5">
                 <div class="font-weight-bolder col-8 col-sm-5 col-md-4 pl-sm-3 col-lg-3 pl-lg-4 pl-xl-5 mx-auto mt-4 mt-sm-3 my-md-4 my-lg-5">
                     <h5 class="mb-0">Adres:</h5>
                     <p class="mb-0">ul. Grunwaldzka 20</p>
                     <p>80-000 Człuchów</p>
-                    <h5 class="font-weight-bold mb-3"><a href="tel:+485555555" class="text-dark">Tel: +48 555-55-55</a></h5>
+                    <h5 class="font-weight-bold mb-3"><a href="tel:+485555555" class="text-dark" title="Call to: +48 555-55-55">Tel: +48 555-55-55</a></h5>
                     <h5 class="my-0">E-mail:</h5>
-                    <p class="font-weight-bold my-0"><a href="mailto:biuro@rywal.pl" class="text-dark">biuro@rywal.pl</a></p>
+                    <p class="font-weight-bold my-0"><a href="mailto:biuro@rywal.pl" class="text-dark" title="Send email to: biuro@rywal.pl">biuro@rywal.pl</a></p>
                 </div>
             </div>
         </div>
@@ -210,7 +210,7 @@
         <!-- footer -->
         <div class="row">
             <footer class="shadow-lg col py-2 bg-light text-dark text-right">
-                <p>Copyright &copy; 2019 <a class="text-dark" href="https://tribusk2.pl/">TribusK2</a></p> 
+                <p>Copyright &copy; 2019 <a class="text-dark" href="https://tribusk2.pl/" target="_blank" title="Visit: www.tribusk2.pl">TribusK2</a></p> 
             </footer>
         </div>
         <!-- footer end-->
