Button counter added

--- a/career.html
+++ b/career.html
@@ -102,7 +102,7 @@
                       <input type="checkbox" class="form-check-input" id="Check" required>
                       <label class="form-check-label" for="Check">Akcepuję <a href="#">plitykę prywatności</a> oraz wyrażam zgodę na przetwarzanie moich danych na potrzeby rekrutacji.</label>
                     </div>
-                    <input type="submit" name="submit" class="btn btn-outline-primary m-3" value="Aplikuj">
+                    <input id="submit" type="submit" name="submit" class="btn btn-outline-primary m-3 counter" value="">
                     <hr>
                     <p class="text-center" style="text-indent: 0;">Możesz też skontaktować się z naszym biurem bezpośrednio, poprzez dane kontaktowe ze stopki.</p>
                 </form>
