--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
     <title>Rywal - Transport i Spedycja</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="icon" href="img/logo_short.png">
+    <link rel="icon" href="img/logo-short.png">
 </head>
 <body>
     <!-- background -->
