--- a/career.html
+++ b/career.html
@@ -94,10 +94,13 @@
                         <small id="emailHelp" class="form-text text-muted">Nie udostępniamy nikomu Twojego adresu.</small>
                     </div>
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="Check" required>
+                        <input id="checkForm" type="checkbox" class="form-check-input" required>
                         <label class="form-check-label" for="Check">Akcepuję <a href="#">plitykę prywatności</a> oraz wyrażam zgodę na przetwarzanie moich danych na potrzeby rekrutacji.</label>
                     </div>
-                    <input id="submit" type="submit" name="submit" class="btn btn-outline-primary m-3 counter" value="">
+                    <button id="submit" type="button" name="submit" class="btn btn-outline-primary m-3 counter">
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        <span class="sr-only">Loading...</span>
+                    </button>
                     <hr>
                     <p id="addText" class="text-center" style="text-indent: 0;">Możesz też skontaktować się z naszym biurem bezpośrednio, poprzez dane kontaktowe ze stopki.</p>
                 </form>
@@ -135,5 +138,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script/script.js"></script>
+    <script src="script/career.js"></script>
 </body>
 </html>
