--- a/confirm.html
+++ b/confirm.html
@@ -55,25 +55,32 @@
                     <div class="form-group pt-3">
                         <label for="input1Confirmed">Twoje imię:</label>
                         <input id="input1Confirmed" type="text" class="form-control btn btn-outline-none text-left" required disabled>
+                        <small class="form-text text-danger validationAlert">Wprowadzone imię ma nieprawidłowy format</small>
                     </div>   
                     <div class="form-group pt-3">
                         <label for="input2Confirmed">Twoje nazwisko:</label>
                         <input id="input2Confirmed" type="text" class="form-control btn btn-outline-none text-left" required disabled>
+                        <small class="form-text text-danger validationAlert">Wprowadzone nazwisko ma nieprawidłowy format</small>
                     </div>  
                     <div class="form-group pt-3">
                         <label for="emailConfirmed">Twój adres email:</label>
                         <input id="emailConfirmed" type="email" class="form-control btn btn-outline-none text-left" aria-describedby="emailHelp" required disabled>
+                        <small class="form-text text-danger validationAlert">Wprowadzony email ma nieprawidłowy format</small>
                     </div>
                     <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="Check" required disabled checked>
+                        <input id="checkConfirmed" type="checkbox" class="form-check-input" required disabled>
                         <label class="form-check-label" for="Check">Akcepuję <a href="#">plitykę prywatności</a> oraz wyrażam zgodę na przetwarzanie moich danych na potrzeby rekrutacji.</label>
+                        <small class="form-text text-danger validationAlert">Akceptacja jest wymagana, aby wysłać swoje dane</small>
                     </div>
-                    <button id="backButton" class="btn btn-outline-primary m-2 mb-5">Popraw</button>
+                    <button id="backButton" type="button" class="btn btn-outline-primary m-2 mb-4">Popraw</button>
                     <div class="form-group">
-                        <label for="FormControlFile">Dołącz swoje CV (format PDF):</label>
-                        <input type="file" name="file" class="form-control-file" id="file" accept=".pdf" required>
+                        <label for="file">Dołącz swoje CV (format PDF 500kB):</label>
+                        <input id="file" type="file" name="file" class="form-control-file btn btn-link" accept=".pdf" required>
                     </div>
-                    <input id="submit" type="submit" name="submit" class="btn btn-outline-primary m-3 counter" value="">
+                    <button id="submit" type="button" name="confirmSubmit" class="btn btn-outline-primary m-3 counter" value="">
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        <span class="sr-only">Loading...</span>
+                    </button>
                 </form>
                 
             </div>
@@ -111,5 +118,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="script/script.js"></script>
+    <script src="script/confirm.js"></script>
 </body>
 </html>
