Send confirmation page added

--- a/career.html
+++ b/career.html
@@ -97,10 +97,12 @@
                         <input id="checkForm" type="checkbox" class="form-check-input" required>
                         <label class="form-check-label" for="Check">Akcepuję <a href="#">plitykę prywatności</a> oraz wyrażam zgodę na przetwarzanie moich danych na potrzeby rekrutacji.</label>
                     </div>
-                    <button id="submit" type="button" name="submit" class="btn btn-outline-primary m-3 counter">
-                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                        <span class="sr-only">Loading...</span>
-                    </button>
+                    <div class="row justify-content-center">
+                        <button id="submit" type="button" name="submit" class="btn btn-outline-primary m-3 counter">
+                            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                            <span class="sr-only">Loading...</span>
+                        </button>
+                    </div>
                     <hr>
                     <p id="addText" class="text-center" style="text-indent: 0;">Możesz też skontaktować się z naszym biurem bezpośrednio, poprzez dane kontaktowe ze stopki.</p>
                 </form>
