--- a/send.html
+++ b/send.html
@@ -47,55 +47,18 @@
         <!-- main content -->
         <div class="row my-5"></div>
 
-        <!-- confirmation form -->
-        <div class="row">
+        <!-- message -->
+        <div id="sendMessage" class="row align-items-center">
             <div class="col-md-10 col-lg-8 col-xl-6 align-items-center mx-auto">
-                <form id="confirmForm" class="p-3 mx-0 my-3 shadow p-sm-5 m-sm-4 m-md-5" action="send.html" method="get">
-                    <h3 class="text-muted">Zweryfikuj swoje dane</h3>
-                    <div class="form-group pt-3">
-                        <label for="input1Confirmed">Twoje imię:</label>
-                        <input id="input1Confirmed" type="text" class="form-control btn btn-outline-none text-left" required disabled>
-                        <small class="form-text text-danger validationAlert">Wprowadzone imię ma nieprawidłowy format</small>
-                    </div>   
-                    <div class="form-group pt-3">
-                        <label for="input2Confirmed">Twoje nazwisko:</label>
-                        <input id="input2Confirmed" type="text" class="form-control btn btn-outline-none text-left" required disabled>
-                        <small class="form-text text-danger validationAlert">Wprowadzone nazwisko ma nieprawidłowy format</small>
-                    </div>  
-                    <div class="form-group pt-3">
-                        <label for="emailConfirmed">Twój adres email:</label>
-                        <input id="emailConfirmed" type="email" class="form-control btn btn-outline-none text-left" aria-describedby="emailHelp" required disabled>
-                        <small class="form-text text-danger validationAlert">Wprowadzony email ma nieprawidłowy format</small>
-                    </div>
-                    <div class="form-check">
-                        <input id="checkConfirmed" type="checkbox" class="form-check-input" required disabled>
-                        <label class="form-check-label" for="Check">Akcepuję <a href="#">plitykę prywatności</a> oraz wyrażam zgodę na przetwarzanie moich danych na potrzeby rekrutacji.</label>
-                        <small class="form-text text-danger validationAlert">Akceptacja jest wymagana, aby wysłać swoje dane</small>
-                    </div>
-                    <button id="backButton" type="button" class="btn btn-outline-primary m-2 mb-4">Popraw dane</button>
-                    <hr>
-                    <div class="form-group">
-                        <label for="file">Dołącz swoje CV (format PDF 400kB):</label>
-                        <input id="file" type="file" name="file" class="form-control-file btn btn-link" accept=".pdf" required>
-                    </div>
-                    <div class="row form-group pt-3 justify-content-center align-items-center">
-                        <label for="codeConfirmed" class="m-2">Kod weryfikacyjny:</label>
-                        <input id="codeConfirmed" type="text" class="form-control col-3" required>
-                        <small class="col-7 m-0 p-0 form-text text-danger text-center validationAlert">Kod nieprawidłowy</small>
-                        <small id="codelHelp" class="form-text text-dark">Kod weryfikacyjny został wysłany na podanego przez Ciebie maila.</small>
-                    </div>
-                    <div class="row justify-content-center">
-                        <button id="submit" type="button" name="confirmSubmit" class="btn btn-outline-primary m-3 counter" value="">
-                            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                            <span class="sr-only">Loading...</span>
-                        </button>
-                    </div>
+                <form class="p-3 mx-0 my-3 shadow p-sm-5 m-sm-4 m-md-5 align-items-center">
+                    <h3 class="text-muted text-center">Dziękujemy!</h3>
+                    <h4 class="mt-3 text-muted text-center">Twoja aplikacja została wysłana.</h4>
+                    <p class="col-12 mt-4 text-center">Jeżeli uznamy, że jesteś osobą, która może pasować do naszego zespołu, skontaktujemy się z Tobą.</p>
                 </form>
-                
             </div>
         </div>
 
-        <!-- confirmation form end-->
+        <!-- message end-->
 
         <!-- main content end-->
 
